syntax = "proto3";

package Config;


option go_package = "/";
//import "google/protobuf/any.proto";
//import "google/protobuf/timestamp.proto";


// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\
       // ! \\         No underscore in label field name !!!                        // ! \\
       // ! \\         field name PascalCase                                        // ! \\
       // ! \\         field number start = 1                                       // ! \\
       // ! \\         enum name PascalCase or UPPERCASE or Capitalize_python       // ! \\
       // ! \\         enum number start = 0                                        // ! \\
// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\// ! \\


// generate config protobuf
// cd ../api/proto/configMsg
// protoc --python_out=. config.proto && protoc --go_out=. config.proto 

// command to generate protobuf package (protobuf install is required, protoc-gen-js and protoc-gen-go also)
// python : protoc --python_out=. Qmsg.proto 
// go : protoc --go_out=. Qmsg.proto 
// c++ : protoc --cpp_out=. Qmsg.proto
// java : protoc --java_out=. Qmsg.proto 
// javascript : protoc --js_out=. Qmsg.proto 


//####################################################################
//####################### Config messages ############################

// client and server
message KeysValues {
    map<string, string> KeyValue = 1;
}

message ConfigMsg {
    enum ConfigClientCmd {
        update_mem_config = 0;
        update_config_object = 1;
        get_mem_config = 2; 
        get_config_object = 3;
        add_config_listener = 4; 
        dump_mem_config = 5;
        get_notif_loglevel = 6;
        update_notif_loglevel = 7;
    }
    
    enum ConfigServerMsg {
        propagate_mem_config = 0;
        mem_config_update_done = 1;
        propagate_config = 2;
        config_update_done = 3;
        mem_config_update_failed = 4;
        config_update_failed = 5;
        propagate_notif_loglevel = 6;
        send_config_init = 7;
        send_mem_config_init = 8;
        send_notif_loglevel_init = 9;  
    }

    ConfigClientCmd ReqClient = 1; 
    map<string, KeysValues> SectionsKeysValues = 2;
    ConfigServerMsg RespServer = 3;
}

//####################### Config messages ############################
//####################################################################
